--- a/css/animate.css
+++ b/css/animate.css
@@ -403,6 +403,11 @@ Copyright (c) 2015 Daniel Eden
   animation-name: tada;
 }
 
+.tada1:hover {
+  -webkit-animation-name: tada;
+  animation-name: tada;
+}
+
 /* originally authored by Nick Pettit - https://github.com/nickpettit/glide */
 
 @-webkit-keyframes wobble {
@@ -1768,6 +1773,13 @@ Copyright (c) 2015 Daniel Eden
 }
 
 .animated.flip {
+  -webkit-backface-visibility: visible;
+  backface-visibility: visible;
+  -webkit-animation-name: flip;
+  animation-name: flip;
+}
+
+.animated.flip1:hover {
   -webkit-backface-visibility: visible;
   backface-visibility: visible;
   -webkit-animation-name: flip;
