--- a/css/estiloEj1.css
+++ b/css/estiloEj1.css
@@ -51,11 +51,11 @@ div{
 	-moz-transition:All 5s ease;
 	-o-transition:All 5s ease;
 
-	transform: rotate(0deg) scale(0.5) skew(2deg) translate(4px);
-	-webkit-transform: rotate(0deg) scale(0.5) skew(2deg) translate(4px);
-	-moz-transform: rotate(0deg) scale(0.5) skew(2deg) translate(4px);
-	-o-transform: rotate(0deg) scale(0.5) skew(2deg) translate(4px);
-	-ms-transform: rotate(0deg) scale(0.5) skew(2deg) translate(4px);
+	transform: rotate(0deg) scale(1) skew(2deg) translate(4px);
+	-webkit-transform: rotate(0deg) scale(1) skew(2deg) translate(4px);
+	-moz-transform: rotate(0deg) scale(1) skew(2deg) translate(4px);
+	-o-transform: rotate(0deg) scale(1) skew(2deg) translate(4px);
+	-ms-transform: rotate(0deg) scale(1) skew(2deg) translate(4px);
 }
 .la:hover{
 	transform: rotate(3600deg) scale(1.5) skew(2deg) translate(4px);
@@ -78,7 +78,15 @@ div{
 	/*border: solid 1px red;*/
 }
 
-#c_enc{
+#c_hola{
+	height: 50%;
+	width: 50%;
+	padding: 0px;
+	margin-left: 25%;
+	/*border: solid 1px red;*/
+}
+
+#c_eyp{
 	width: 100%;
 	height: 30%;
 	/*border: dashed 1px white;*/
@@ -91,14 +99,3 @@ div{
 	font-size: 180%;
 }
 
-#c_pie{
-	width: 100%;
-	height: 10%;
-	/*border: solid 1px green;*/
-	padding: 0px;
-	margin: 0px;
-	clear: both;
-	color: red;
-	text-shadow:2.5px 2.5px 2.5px #000000;
-
-}
